fixing font on small screen

--- a/simple-life-project/styles/styles.css
+++ b/simple-life-project/styles/styles.css
@@ -67,7 +67,7 @@ strong {
 }
 
 p {
-    line-height: 30px;
+    line-height: 26px;
 }
 /* navigation */
 
@@ -88,6 +88,7 @@ nav a {
     letter-spacing: 3px;
     font-weight: 700;
     padding: .25em 0;
+    font-size: .95rem;
 }
 
 nav a:hover,
